--- a/config/locales/en-GB.yml
+++ b/config/locales/en-GB.yml
@@ -665,6 +665,7 @@ en-GB:
         labels label: "Labels:"
         title: "Bookmarks"
         my labels: "My labels"
+        all labels: "Show all"
         not found: "Bookmarks give you a quick reference guide to your favourite passages or to the last chapter you read in a particular book. To add a bookmark, select a verse in the Bible reader and then click the selected button at the top of the reader."
         other user not found: "%{username} hasn't saved any bookmarks yet."
         creation form errors: "The following error(s) prevented creation of your bookmark:"
