--- a/config/locales/hi.yml
+++ b/config/locales/hi.yml
@@ -665,6 +665,7 @@ hi:
         labels label: "लेबिल:"
         title: "बुकमार्क्स"
         my labels: "मेरी लेबल"
+        all labels: "Show All"
         not found: "बुकमार्क्स आपको तुरंत आपके पसंदीदा पद्य या आपके द्वारा पढ़ा हुआ विशेष किताब के आखरी अध्याय पर ले जायेगा । बुकमार्क से जुड़ने के लिए बाइबिल रीडर से पध्यों सेलेक्ट करे और रीडर के ऊपर दर्शाए गए सेलेक्टेड बटन क्लिक कीजिए।"
         other user not found: "%{username} के द्वारा कोई बुकमार्क्स save नहीं किया गया हैं।"
         creation form errors: "निम्नलिखित error(s) के कारण बुकमार्क निर्माण विफल हुआ:"
