--- a/config/locales/mk.yml
+++ b/config/locales/mk.yml
@@ -665,6 +665,7 @@ mk:
         labels label: "Етикети:"
         title: "Обележувачи"
         my labels: "Мои обележувања"
+        all labels: "Show All"
         not found: "Обележувачите овозможуваат брз пристап до омилените пасуси или до последното поглавје што го читаш во некоја книга од Библијата. За да создадеш обележувач, избери стих во читачот на Библијата што го користиш и кликни на копчето \"Селектирано\" на врвот од читачот."
         other user not found: "%{username} се уште нема зачувано обележувачи."
         creation form errors: "Следниве грешки го спречија создавањето обележувач:"
