--- a/config/locales/mn.yml
+++ b/config/locales/mn.yml
@@ -485,7 +485,7 @@ mn:
         no devices download copy: "Энэхүү Библийн Апп нь YouVersion.com онлайн Библи дээр суурилагдсан бөгөөд бараг бүх төрлийн зөөврийн хэрэгсэлд үнэгүй суулгах боломжтой. Мөн энэ Апп нь хэрэглэгчдэд Библи унших, уншсан ишлэлүүдээ олон нийтийн сүлжээнд хуваалцах, дуртай ишлэлүүддээ хавчуурга үүсгэх зэрэг олон зүйл бий; хөдөлгөөнт амьдралын хэв маягт шаардлагатай бүхий л шинж чанарыг агуулсан. Гар утаснаасаа <a href='https://www.bible.com/app'>bible.com/app</a> орж Библийн Апп татаж авч өөрийн бүртгэлтэйгээ холбоно уу!"
         yes delete: "Тиймээ, Миний Бүртгэлийг устга"
         account delete success: "Таны YouVersion бүртгэл амжилттай устгагдлаа. Бидний зүгээс таныг цаашдаа Библитэй харилцах сайн арга замыг олно гэдэгт найдаж байна. Эдгээр зарим апп-ууд таны цаашдийн үйлсэд тустай байж болох юм: <a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
-        delete account description: "If you delete your account, you will permanently eliminate all of your information, history, and personalization (such as notes, bookmarks, highlights, etc.) within Bible.com and the Bible App. This action cannot be reversed by you or by our team. If you're certain you'd like to move forward, proceed below."
+        delete account description: "Хэрвээ та өөрийн мэдээллээ устгавал Bible.com ба Bible App дээрх таны бүх мэдээлэл, түүх ба хувийн болгосон бүхэн чинь (тэмдэглэлүүд, хавчуургууд, тодруулгууд) бүр мөсөн устах болно. Энэ үйлдлийг та эсвэл манай багынхан буцааж чадахгүй. Энэ үйлдлийг хийхдээ итгэлтэй байгаа бол дараагийн шатанд шилжээрэй."
         user recent activity: "%{user}-н Сүүлийн Үйл Явдал"
         my notes: "Тэмдэглэлүүд"
         user notes: "%{user}-н Тэмдэглэлүүд"
@@ -636,7 +636,7 @@ mn:
             notification errors: "Таны мэдээлэлийг шинэчлэх үед дараах алдаа(нууд) гарлаа:"
             edit: "Засах"
             bio: "Намтар"
-            complete_first_last: "Complete your profile by filling in your first and last name"
+            complete_first_last: "Хувийн хавтсаа дуусгахын тулд овог нэрээ оруул."
         password: 
             updated: "Таны нууц үг амжилттай шинэчлэгдлээ!"
             error: "Уучлаарай, таны нууц үгийг солих явцад алдаа гарлаа."
@@ -645,7 +645,7 @@ mn:
             badges: "Миний авсан тэмдэгтүүдийн талаар мэдэгдэх."
             follower: "Намайг хүн дагахад мэдэгдэх."
             newsletter: "YouVersion-ий зарлалуудыг надад мэдэгдэх."
-            contact_joins: "Notify me when a Contact joins"
+            contact_joins: "Харилцагч шинээр ороход надад мэдэгдэнэ үү"
             note_like: "Миний тэмдэглэл хэн нэгэнд таалагдахад надад мэдэгдэх."
             reading_plans: "Миний уншиж байгаа тѳлѳвлѳгѳѳний талаар надад мэдэгдэх."
             publishing partners: "YouVersion контент түншүүдийн мэдээг надад мэдэгдэх."
@@ -665,6 +665,7 @@ mn:
         labels label: "Шошгууд:"
         title: "Хавчуургууд"
         my labels: "Миний Шошгууд"
+        all labels: "Show All"
         not found: "Номны хавчуурга нь таны сүүлд уншиж байсан газраа санах, тодорхой нэг номны сүүлд уншссан бүлэг эсвэл дуртай догол мөрийн тайлбарыг шууд өгөх боломжийг өгдөг. Номын хавчуурга нэмэхийн тулд доторх ишлэлээ сонгоно, дараа нь өөрийнхөө Миний хуудас хадгалахын тулд номын хавчуурга гэсэн товчлуурыг дарна."
         other user not found: "%{username}  ямарч номын хавуурга хадгалаагүй байна."
         creation form errors: "Дараах алдаа(ууд) хавчуурга шинээр хийхэд саад болж байна:"
@@ -914,7 +915,7 @@ mn:
         creation form errors: "Дараах алдаа(ууд) хандив өргөхөд саад болж байна:"
     download ad: 
         title: "Үнэгүй Библийн Апп татах"
-        description copy: "Hundreds of versions in %{language_count}+ different languages - the Bible that goes with you anywhere."
+        description copy: "Хэдэн зуун орчуулгууд %{language_count} олон хэл дээр бий - хаана ч тантай хамт байх Библи."
         line 1: "Олон орчуулга 100+"
         line 2: "өөр хэл дээр - Хаана ч"
         line 3: "тантай хамт байх Библи."
@@ -942,7 +943,7 @@ mn:
         facebook: "YouVersion Facebook дээр"
         twitter: "YouVersion Twitter дээр"
         support: "YouVersion ашиглахад туслалцаа хэрэгтэй?"
-        lead copy: "Based on the online Bible, Bible.com, the Bible App is a free mobile Bible that can be installed on almost any phone. The Bible App allows users to read the Bible, share verses with their social networks, bookmark their favorite passages, and more—all in a format that keeps up with their increasingly mobile lifestyle."
+        lead copy: " Bible.com, онлайн Библи дээрх үндэслэсэн Библи Апп нь бүх төрлийн утсанд суулгах боломжтой үнэгүй, хөдөлгөөнт Библи юм. Библи Апп нь хэрэглэгчдэд Библи унших, олон нийтийн сүлжээгээр ишлэлүүд хуваалцах, дуртай ишлэлүүддээ хавчуурга хийх болон хурдацтай хөгжиж буй хөдөлгөөнт хэрэгсэлд тань нийцэхүйц бусад бүх л зүйлийг хийх боломжыг олгосон."
         resources title: "Хэвлэл Мэдээллийн Сурвалжууд"
         now title: "YouVersion Ѳнѳѳдѳрийн Мэдээлэл"
         resources: 
