--- a/config/locales/sw.yml
+++ b/config/locales/sw.yml
@@ -41,11 +41,11 @@ sw:
         share: "husisha wengine/jumuisha"
         add comment: "Ongeza maoni"
         my connections: "akaunti zilizounganishwa"
-        connected as: "You are connected to %{connection} as %{username}."
+        connected as: "Umeunganishwa na %{connection} kama %{username}."
         remove connection: "Toa uhusiano huu"
-        connection friends: "Here are some YouVersion users you're connected to on %{connection}:"
+        connection friends: "hapa kuna baadhi ya watumiaji wa YouVersion ambao mmeshikamana nao kwa %{connection}:"
         errors: 
-            no friends: "None of your %{connection} friends appear to be on YouVersion yet."
+            no friends: "Hakuna %{connection} marafiki zako waliopo katika YouVersion."
             reset connection: "Samahani, hitilafu imetokea. Tafadhali funga na kisha unganisha tena uhusiano huu."
         email: 
             name: "Barua pepe"
@@ -138,7 +138,7 @@ sw:
     about title: "Kuhusu YouVersion"
     make a donation: "toa mchango wako"
     thanks for your donation: "asante kwa kutoa mchango wako"
-    thanks authorization: "If you requested a receipt, it will be in your inbox shortly."
+    thanks authorization: "Kama uliomba risiti, itakuwa kwenye barua pepe hivi karibuni."
     donation error: "Samahani, hitilafu ilitokea kwa mchango wako. Hitilafu ni: %{error_text}"
     created ago: "Ilitengenezwa %{time_ago} uliopita"
     copy: "Nakili"
@@ -212,8 +212,8 @@ sw:
     save: "okoa/kuokoa"
     cancel: "Ondoa"
     try the beta: "jaribu Beta"
-    welcome to the beta: "Welcome to Bible.com!"
-    highlight: "Highlight Verse"
+    welcome to the beta: "Karibu Bible.com"
+    highlight: "Alamisha Fungu"
     comment: "maoni mpya"
     note: "Dondoo mpya"
     selected: "imechaguliwa"
@@ -222,7 +222,7 @@ sw:
     notes title: "maelezo"
     friends: "Marafiki"
     groups: "makundi"
-    mobile: "Mobile Apps"
+    mobile: "Apu za simu za mkononi"
     live: "Maisha/Makundi"
     first page: "Kurasa ya kwanza"
     last page: "Kurasa ya mwisho"
@@ -233,7 +233,7 @@ sw:
     percentage display: "%{number}%"
     myself: "mimi"
     none found: "Hatukuweza kupata chochote katika vigezo vyako. Jaribu kufafanua unachotafuta."
-    paginated items shown: "%{first_shown}–%{last_shown} of %{total_available}"
+    paginated items shown: "%{first_shown}–%{last_shown} ya %{total_available}"
     160 character limit: "herufi 160 au china ya herufi hizo"
     recent versions: "Zilizotumiwa hivi karibuni"
     or: 
@@ -253,13 +253,13 @@ sw:
         users like this: "%{last_liker_link} na %{more_link} penda hii"
         vod: 
             title: "Fungu la siku"
-            get daily email: "Get daily email"
-            subscribe: "Subscribe"
+            get daily email: "Pata barua pepe kila siku"
+            subscribe: "Jiunge"
             update: "Wezesha"
-            unsubscribe: "Unsubscribe"
+            unsubscribe: "Jitoe"
             version: "Tolea"
-            view more: "View More"
-            time: "Time"
+            view more: "Angalia zaidi"
+            time: "Saa"
         friendship: 
             now friends: "Wewe sasa ni marafiki na"
         cta: 
@@ -285,7 +285,7 @@ sw:
             edit highlight title: "Hariri onyesho hili"
             edit bookmark title: "Hariri alamisho hili"
             edit note title: "Hariri elezo hili"
-            edit subscription: "Edit subscription"
+            edit subscription: "Hariri mchango"
             delete: "Ondoa"
             delete confirm: "Unahuakika?"
             delete highlight title: "Futa onyesho hili"
@@ -357,8 +357,8 @@ sw:
             add friend button title: "Tuma %{user} ombi la urafiki"
             accept button: "Kubali"
             accept request button: "Kubali ombi"
-            ignore button: "Decline"
-            ignore request button: "Decline request"
+            ignore button: "Kataa"
+            ignore request button: "Kanusha ombi"
     notes: 
         none user: "%{username} hana maelezo yoyote."
         blank slate: 
@@ -396,7 +396,7 @@ sw:
         all notes: "matini yote"
         community notes: "Dondoo za jumuiya"
         new note: "Dondoo mapya"
-        status field: "Note Status:"
+        status field: "Andika hali:"
         edit: "hariri"
         delete: "toa dondoo hii"
         confirm delete: "Ndio, ninahuakika"
@@ -409,7 +409,7 @@ sw:
         create failure: "Hitilafu katika utunzaji wa elezo"
         destroy success: "Elezo limeondolewa"
         destroy failure: "Hitilafu kuondoa elezo"
-        update success: "Note updated"
+        update success: "Elezo limewezeshwa"
     ref: 
         loading secondary: "Marejeo yanatolewa katika Toleo Sekondari ..."
         clear verses: "Ondoa mistari iliyochaguliwa"
@@ -454,7 +454,7 @@ sw:
         sign up for an account: "Tengeneza akaunti ya bure ya YouVersion"
         recent activity: "mambo ya hivi karibuni"
         my recent_activity: "shughuli zangu za hivi karibuni"
-        subscribed to plan: "Users Subscribed to %{plan}"
+        subscribed to plan: "mtumiaji amejiunga na %{plan}"
         reading: "Watumiaji wanasoma mpango huu"
         subscribed previously: "ilianza %{time_ago} uliopita"
         sign in for settings: "tafadhali saini ili kupata profaili yako"
@@ -471,21 +471,21 @@ sw:
         edit notifications: "simamia taarifa"
         edit connections: "akaunti zilizounganishwa"
         edit devices: "vifaa vilivyounganishwa"
-        vod_subscriptions: "Verse of the Day Subscriptions"
-        vod_subscription success: "You have successfully updated your Verse of the Day subscription!"
-        vod_subscription failure: "Sorry, there was a problem updating your Verse of the Day subscription."
-        daily email delivery: "Daily email delivery"
-        time: "Time"
-        daily push notifications: "Daily push notifications for mobile apps"
-        subscribe: "Subscribe"
-        unsubscribe: "Unsubscribe"
+        vod_subscriptions: "Kujiunga na Fungu la Siku"
+        vod_subscription success: "Umefanikiwa kuwezesha ubaliano la Fungu la Siku!"
+        vod_subscription failure: "Samahani, kulikuwa na tatizo katika kuwezesha Fungu la Siku"
+        daily email delivery: "Barua pepe ya kila siku"
+        time: "Saa"
+        daily push notifications: "Taarifa aina ya Push ya rununu ya kila siku"
+        subscribe: "Jiunge"
+        unsubscribe: "Jitoe"
         edit account_existence: "Futa akaunti"
         delete account button: "Futa akaunti yangu ya YouVersion"
         no devices: "Hakuna kifaa chenye uhusiano na akauti yako ya YouVersion."
         no devices download copy: "Kulingana na Biblia ya hewani, YouVersion, App ya Biblia ni Biblia ya bure ya simu ambayo inaweza kuwekwa kwenye simu ya mkononi karibu yoyote. Apu ya Biblia inaruhusu watumiaji kusoma Biblia,  kushiriki mafungu na mitandao yao ya kijamii, kualamamisha mafungu uyapendao, na zaidi-yote katika mfumo unaoendena na ongezeko wa utumiaji wa simu za mkononi. Ziara ya <a href='https://www.bible.com/app'> bible.com / programu &lt;/ a&gt; kutoka kwa kifaa yako ya simu kushusha App Biblia na kuungana akaunti yako!"
         yes delete: "Ndio, Futa akaunti yangu"
         account delete success: "Akaunti yako ya YouVersion imetolewa. Tunatumaini kuwa utaendelea kutafuta njia ya maana kujijulisha mambo ya bibilia. Vitumizi hivi vinaweza kukusaidia unaposonga mbele:<a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
-        delete account description: "If you delete your account, you will permanently eliminate all of your information, history, and personalization (such as notes, bookmarks, highlights, etc.) within Bible.com and the Bible App. This action cannot be reversed by you or by our team. If you're certain you'd like to move forward, proceed below."
+        delete account description: "Kama utafuta akaunti yako, kwa kudumu utapoteza maelezo yako yote, historia, na mambo binafsi (kama maelezo, maalamisho, maonyesho, nakadhalika.) ndani ya Bible.com na Apu ya Biblia. Tendo hili haliwezi kubadilishwa na wewe au timu yetu. Kama unahuhakika inataka kuendelea, endelea chini."
         user recent activity: "%{user} shughuli za hivi karibuni"
         my notes: "Maelezo yangu"
         user notes: "%{user} maelezo"
@@ -547,7 +547,7 @@ sw:
             enforcement title: "utekelezaji"
             enforcement text: "do not translate"
             questions title: "maswali"
-            questions text: "Any questions about the privacy policy can be directed to: <a href='mailto:legal@youversion.com'>legal@youversion.com</a>"
+            questions text: "Maswali yoyote kuhusu sera binafsi zinaweza kuelekezwa kwa: legal@youversion.com<a href='mailto:legal@youversion.com'>legal@youversion.com</a>"
         terms: 
             title: "masharti ya matumizi"
             translation disclaimer: "Masharti ya matumizi yametafsiriwa kwa niaba yako, hata hivyo, LifeChurch.tv  hakuna dhamana au uwakilishi na heshima kwa usahihi wa tafsiri hii. Kama hitilafu yoyote hupatikana kati ya Kiingereza na toleo iliyotafsiriwa, toleo ya Kiingereza itatawala."
@@ -636,7 +636,7 @@ sw:
             notification errors: "(ma)kosa haya yalizuia taarifa zako kusahihishwa"
             edit: "Hariri"
             bio: "Wasifu"
-            complete_first_last: "Complete your profile by filling in your first and last name"
+            complete_first_last: "Kamilisha profaili yako kwa kujaza jina lako ya kwanza na la mwisho"
         password: 
             updated: "Mafanikio! umewezesha kitambulisho chako cha siri."
             error: "Samahani, kulikuwa na hitilafu katika kubadili kitambulisho chako cha siri."
@@ -645,7 +645,7 @@ sw:
             badges: "nijulishe kuhusu beji nilizopata."
             follower: "nijulishe mtu atakapo nifuata."
             newsletter: "Nijulishe na matangazo ya YouVersion."
-            contact_joins: "Notify me when a Contact joins"
+            contact_joins: "Nijulishe mtu ninayewasiliana nae atakapo jiunga"
             note_like: "Nijulishe mtu akipenda maelezo yangu."
             reading_plans: "nijulishe kuhusu taarifa ya mpango wangu wa usomaji nilioanza."
             publishing partners: "Nipe ujumbe kutoka kwa washirika wa YouVersion"
@@ -665,6 +665,7 @@ sw:
         labels label: "Maandiko:"
         title: "Alama"
         my labels: "Lebo zangu"
+        all labels: "Show All"
         not found: "Alama kukupa mwongonzo wa haraka wa kurejea kwa vifungu vyako unavyopenda au sura ya mwisho uliyosoma katika kitabu maalum. Kuongeza alama, chagua mstari katika Biblia na kisha bofya batani iliyochaguliwa juu ya kifaa cha kusomea."
         other user not found: "%{username} bado hajahifadhi alama zozote."
         creation form errors: "Makosa  yafuatayo(s) yalikuzuia kutengeneza alama"
@@ -914,7 +915,7 @@ sw:
         creation form errors: "Makosa  yafuatayo(s) yalikuzuia kufanya mchango:"
     download ad: 
         title: "Pata programu ya bure ya Bibilia"
-        description copy: "Hundreds of versions in %{language_count}+ different languages - the Bible that goes with you anywhere."
+        description copy: "Mamia ya matoleo kwenye %{language_count}+ lugha tofauti - Biblia inayoeda na wewe kokote"
         line 1: "mamia ya matoleo yenye"
         line 2: "lugha tofauti - biblia ambayo"
         line 3: "itaenda na wewe sehemu yoyote."
@@ -942,7 +943,7 @@ sw:
         facebook: "YouVersion katika Facebook"
         twitter: "YouVersion katika Twitter"
         support: "Unahitaji msaada wa utumizi wa  YouVersion?"
-        lead copy: "Based on the online Bible, Bible.com, the Bible App is a free mobile Bible that can be installed on almost any phone. The Bible App allows users to read the Bible, share verses with their social networks, bookmark their favorite passages, and more—all in a format that keeps up with their increasingly mobile lifestyle."
+        lead copy: "Kulingana na Biblia ya mtandao, Bible.com, Apu ya Biblia ni Biblia ya bure ya simu za mkononi inayoweza kuwekwa kwenye simu karibia yoyote Apu ya Biblia inaruhusu watumiaji kusoma Biblia, kushirikisha mafungu kwenye mitandao yao ya jamii, kualamisha mafungu wayapendayo, na mengi -yote huwekwa kwenye mtindo unaoendana na shughuli zasimu za mkononi."
         resources title: "Rasilimali za wanahabari"
         now title: "Leo katika Jamii yako ya YouVersion"
         resources: 
@@ -962,7 +963,7 @@ sw:
     mobile page: 
         h2: "Neno la Mungu lipo nawe."
         h3: "YouVersion ni ya kimataifa"
-        h3 sub: "Available in more than %{language_count} languages worldwide."
+        h3 sub: "Inapatikana kwenywe %{language_count}lugha duniani kote."
         main: "Mamilioni ya watu wanatumia App ya Bibilia ™ kufanya Neno la Mungu iwe sehemu ya maisha yao ya kila siku. Pakua programu ya bure na upate maelezo ya maalamisho yako, na mipango ya kusoma kutoka mahali popote. Furahia mamia ya matoleo, ikiwa pamoja na audio yote kwa rununu yako."
         button h4: "Enda kwa. Bible.com/app"
         button h4 sub: "kwenye rununu yako"
@@ -983,7 +984,7 @@ sw:
         symbian: "Symbian"
         mobile web: "tovuti katika mtandao wa simu"
         amazon: "Kindle Fire"
-        free overlay: "100% Free"
+        free overlay: "100% Bure"
     pages: 
         generic_error: 
             title: "Ala!"
@@ -1005,7 +1006,7 @@ sw:
                 subscribe heading: "Jiandikishe kwa mipango ya Bibilia"
                 subscribe description: "Maliza Biblia nzima, kuzingatia mada, au kusoma ibada kutoka kwa mwalimu mzuri. Chagua mpango wako na kila siku utapata sehemu ya Biblia teule ikikusubiri."
                 download heading: "Chukua Biblia na wewe."
-                download description: "<a href='https://bible.com/download'>Download</a> the Bible App for free on any mobile device. When you use the mobile app, your notes, bookmarks, highlights, plans, and more will be automatically synced across all of your devices."
+                download description: "<a href='https://bible.com/download'> Download </a> App ya Biblia ya bure kwenye kifaa chochote cha rununu. Unapo tumia App hii ya rununu, vidokezo vyako, maalamisho yako, mambo muhimu, mipango, na zaidi itaunganishwa moja kwa moja kwenye vifaa vyako vyote."
             get started: "Anza na akaunti yako ya bure."
             word with you: "Neno la Mungu iko pamoja na wewe."
             download action: "Download App ya Bibilia"
