--- a/config/locales/uk.yml
+++ b/config/locales/uk.yml
@@ -665,6 +665,7 @@ uk:
         labels label: "Мітки:"
         title: "Закладки"
         my labels: "Мої мітки"
+        all labels: "Показати усе"
         not found: "Закладки допомагають швидко знайти улюблені уривки або останній розділ, який ви читаєте в конкретній книзі. Щоб створити закладку виділіть вірш у програмі читання Біблії і натисніть обрану кнопку вгорі."
         other user not found: "%{username} поки що не зберіг жодної закладки."
         creation form errors: "При створенні закладки виникла така помилка(и):"
