--- a/config/locales/af.yml
+++ b/config/locales/af.yml
@@ -222,7 +222,7 @@ af:
     notes title: "Notas"
     friends: "Vriende"
     groups: "Groepe"
-    mobile: "Mobile Apps"
+    mobile: "Mobiele Apps"
     live: "Lewendig/Groepe"
     first page: "Eerste Bladsy"
     last page: "Laaste Bladsy"
@@ -357,8 +357,8 @@ af:
             add friend button title: "Stuur 'n vriendskap versoek aan %{user}"
             accept button: "Aanvaar"
             accept request button: "Aanvaar versoek"
-            ignore button: "Decline"
-            ignore request button: "Decline request"
+            ignore button: "Verval"
+            ignore request button: "Laat versoek verval"
     notes: 
         none user: "%{username} het nog nie enige notas gemaak nie."
         blank slate: 
@@ -409,7 +409,7 @@ af:
         create failure: "Daar was 'n fout met die stoor van die nota"
         destroy success: "Nota verwyder"
         destroy failure: "Daar was 'n fout met die verwyder van die nota"
-        update success: "Note updated"
+        update success: "Nota opgedateer"
     ref: 
         loading secondary: "Laai verwysing in alternatiewe weergawe..."
         clear verses: "Verwyder Geselekteerde Verse"
@@ -472,11 +472,11 @@ af:
         edit connections: "Gekoppelde Rekeninge"
         edit devices: "Gekoppelde Toestelle"
         vod_subscriptions: "Vers van die Dag Intekeninge"
-        vod_subscription success: "Jy het jou Vers vir die Dag intekening suksesvol opgedateer!"
+        vod_subscription success: "Jy het jou Vers van die Dag intekening suksesvol opgedateer!"
         vod_subscription failure: "Jammer, daar was 'n probleem met die opdatering van jou Verse van die Dag intekening."
         daily email delivery: "Daaglikse epos aflewering"
         time: "Tyd"
-        daily push notifications: "Daily push notifications for mobile apps"
+        daily push notifications: "Daaglikse deurgedrukte kennisgewings vir mobiele toeps"
         subscribe: "Teken In"
         unsubscribe: "Kanselleer Intekening"
         edit account_existence: "Sluit Rekening"
@@ -485,7 +485,7 @@ af:
         no devices download copy: "Gebaseer op die aanlyn Bybel, YouVersion, die Bybel Toep is 'n gratis mobiele Bybel wat op bykans enige toestel geïnstalleer kan word. Die Bybel Toep laat gebruikers toe om die Bybel te lees, verse te deel met sosiale netwerke, gunsteling gedeeltes te boekmerk en vele meer&amp;mdash:all in 'n formaat wat tred hou met die snelgroeiende mobiele leefstyl. Besoek <a href='https://www.bible.com/app'>bible.com/app</a>  van jou mobiele toestel om die Bybel Toep af te laai en te koppel jou rekening!"
         yes delete: "Ja, Sluit My Rekening"
         account delete success: "Jou YouVersion rekening is suksesvol gesluit. Ons hoop dat jy sal voortgaan om betekenisvolle maniere te vind om interaktief met die Bybel te verkeer. Van hierdie apps mag dalk handig te pas kom soos jy aanbeweeg:  <a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
-        delete account description: "If you delete your account, you will permanently eliminate all of your information, history, and personalization (such as notes, bookmarks, highlights, etc.) within Bible.com and the Bible App. This action cannot be reversed by you or by our team. If you're certain you'd like to move forward, proceed below."
+        delete account description: "Wanneer jy jou rekening uitvee, verwyder jy al jou informasie, geskiedenis en verpersoonliking (soos notas, boekmerke, hoogtepunte ens.) binne die Bible.com en BibleApp sfeer permanent. Hierdie aksie kan nie deur uself of deur ons span ongedaan gemaak word nie. As u seker is u wil voortgaan, doen so hieronder."
         user recent activity: "%{user} se Onlangse Aktiwiteite"
         my notes: "Notas"
         user notes: "%{user} se Notas"
@@ -636,7 +636,7 @@ af:
             notification errors: "Die volgende fout(e) het opdatering van kennisgewings verhoed:"
             edit: "Wysig"
             bio: "Bio"
-            complete_first_last: "Complete your profile by filling in your first and last name"
+            complete_first_last: "Voltooi jou profiel deur jou naam en van in te vul"
         password: 
             updated: "Sukses! Jou wagwoord is verander."
             error: "Jammer, daar was 'n fout met jou wagwoord verandering."
@@ -645,7 +645,7 @@ af:
             badges: "Stel my in kennis van enige kentekens wat ek verwerf het."
             follower: "Stel my in kennis as iemand my volg."
             newsletter: "Hou my op hoogste van YouVersion aankondigings."
-            contact_joins: "Notify me when a Contact joins"
+            contact_joins: "Stel my in kennis wanneer 'n kontak aansluit"
             note_like: "Stel my in kennis as iemand van my notas hou."
             reading_plans: "Stel my in kennis van informasie vir leesplanne wat ek begin het."
             publishing partners: "Hou my op hoogte met nuus van YouVersion se inhouds vennote."
@@ -665,6 +665,7 @@ af:
         labels label: "Etikette:"
         title: "Boekmerke"
         my labels: "My Etikette"
+        all labels: "Show All"
         not found: "Boekmerke gee jou 'n vinnige terugverwysingsgids na jou gunsteling gedeeltes of na die laaste hoofstuk wat jy in 'n spesifieke boek gelees het. Om 'n boekmerk by te voeg, kies 'n vers in die Bybel leser en kliek dan die seleksie knoppie bo aan die leser."
         other user not found: "%{username} het nog nie enige boekmerke gestoor nie."
         creation form errors: "Die volgende fout(e) het verhoed dat jy 'n boekmerk kon skep:"
@@ -914,7 +915,7 @@ af:
         creation form errors: "Die volgende fout(e) het verhoed dat jy 'n donasie kon maak:"
     download ad: 
         title: "Laai die Free Bible App af"
-        description copy: "Hundreds of versions in %{language_count}+ different languages - the Bible that goes with you anywhere."
+        description copy: "Honderde vertalings in %{language_count} + verskillende tale - die Bybel wat oral saam met jou gaan."
         line 1: "Honderde weergawes in 100+"
         line 2: "verskillende tale - die Bybel wat"
         line 3: "orals saam met jou gaan."
@@ -942,7 +943,7 @@ af:
         facebook: "YouVersion op Facebook"
         twitter: "YouVersion op Twitter"
         support: "Benodig hulp met YouVersion?"
-        lead copy: "Based on the online Bible, Bible.com, the Bible App is a free mobile Bible that can be installed on almost any phone. The Bible App allows users to read the Bible, share verses with their social networks, bookmark their favorite passages, and more—all in a format that keeps up with their increasingly mobile lifestyle."
+        lead copy: "Gebaseer op die aanlyn Bybel, Bible.com, is die Bybel App 'n gratis mobiele Bybel wat op amper enige foon geïnstalleer kan word. Die Bybel App laat gebruikers toe om die Bybel te lees, verse te deel met hul sosiale netwerke, hul gunsteling gedeeltes te boekmerk en meer - alles in `n formaat wat tred hou met hul toenemend mobiele leefstyl."
         resources title: "Media Hulpbronne"
         now title: "Vandag in die YouVersion Gemeenskap"
         resources: 
@@ -962,7 +963,7 @@ af:
     mobile page: 
         h2: "God se Woord is by jou."
         h3: "YouVersion is Globaal"
-        h3 sub: "Available in more than %{language_count} languages worldwide."
+        h3 sub: "Beskikbaar in meer as %{language_count} tale wêreldwyd."
         main: "Mense by die miljoene gebruik die Bible App™ om God se Woord deel van hul daaglikse lewens te maak. Laai die gratis app af om toegang tot jou boekmerke, notas en leesplanne van enige plek af te verkry. Geniet honderde weergawes, insluitende klank, alles op jou mobiele toestel."
         button h4: "Gaan na Bybel.com/app"
         button h4 sub: "Op Jou Mobiele Toestel"
@@ -983,7 +984,7 @@ af:
         symbian: "Symbian"
         mobile web: "Mobiele Web"
         amazon: "Kindle Fire"
-        free overlay: "100% Free"
+        free overlay: "100 % Gratis"
     pages: 
         generic_error: 
             title: "Oeps!"
