--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -665,6 +665,7 @@ zh-CN:
         labels label: "标签："
         title: "书签"
         my labels: "我的标签"
+        all labels: "Show All"
         not found: "书签能使您快速查询到某一特定书卷中您喜欢的章节或您上次阅读的章节。添加书签的方法是在圣经阅读器中选择一节经文，然后点击阅读器顶部的【选定】按钮即可。"
         other user not found: "%{username}还没有保存任何书签。"
         creation form errors: "下列错误妨碍了您创建书签："
